[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }

lambda_runtime = "0.13.0"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros"] }
